--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8"/>
  <title>手元の動画から字幕を抽出</title>
  <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: https://unpkg.com/ 'wasm-unsafe-eval' ;" />
- <link href="/extsub.css" rel="stylesheet" type="text/css" />
+ <link href="./extsub.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
  <h1 id="title">動画から字幕だけ出す</h1>
@@ -18,6 +18,6 @@
   (<a href="https://www.fmworld.net/cs/azbyclub/qanavi/jsp/qacontents.jsp?PID=0209-8188">警告</a>が<a href="https://freesoft.tvbok.com/win10/operation/allow_smartscreen.html">出る</a>し使いにくい)
  </p>
  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.1/dist/ffmpeg.min.js" crossorigin></script>
- <script src="/extsub.js"></script>
+ <script src="./extsub.js"></script>
 </body>
 </html>
