Use symlink of coi.min.js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
  </p>
  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.1/dist/ffmpeg.min.js" crossorigin></script>
  <script src="./extsub.js"></script>
- <script src="./coi-serviceworker/coi-serviceworker.js"></script>
+ <script src="./coi-serviceworker.min.js"></script>
 </body>
 </html>
