Update ffmpeg to 0.12.2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <button id="dlbutton">Windows用の似たソフト</button>
   (<a href="https://www.fmworld.net/cs/azbyclub/qanavi/jsp/qacontents.jsp?PID=0209-8188">警告</a>が<a href="https://freesoft.tvbok.com/win10/operation/allow_smartscreen.html">出る</a>し使いにくい)
  </p>
- <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.5/dist/ffmpeg.min.js" crossorigin></script>
- <script src="./extsub.js"></script>
+ <script type="module" src="./extsub.js"></script>
 </body>
 </html>
