--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8"/>
  <title>手元の動画から字幕を抽出</title>
- <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: https://unpkg.com/ 'wasm-unsafe-eval' ;" />
+ <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: 'wasm-unsafe-eval' ;" />
  <script src="./coi-config.js"></script>
  <script src="./coi-serviceworker.min.js"></script>
  <link href="./extsub.css" rel="stylesheet" type="text/css" />
