--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <button id="dlbutton">Windows用の似たソフト</button>
   (<a href="https://www.fmworld.net/cs/azbyclub/qanavi/jsp/qacontents.jsp?PID=0209-8188">警告</a>が<a href="https://freesoft.tvbok.com/win10/operation/allow_smartscreen.html">出る</a>し使いにくい)
  </p>
- <script type="module" src="./ffmpeg-util.js"></script>
- <script type="module" src="./ffmpeg.js"></script>
- <script type="module" src="./extsub.js"></script>
+ <script type="module" src="./ffmpeg-util.js" defer=""></script>
+ <script type="module" src="./ffmpeg.js" defer=""></script>
+ <script type="module" src="./extsub.js" defer=""></script>
 </body>
 </html>
