--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <input type="file" id="uploader" accept=".mp4,video/*">
  </label>
  <p id="subs">エラー</p>
+ <pre id="progress">0 %</pre>
  <pre id="logs">お待ちください</pre>
  <p id="download">
   <button id="dlbutton">Windows用の似たソフト</button>
