--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: 'wasm-unsafe-eval' ;" />
  <script src="./coi-config.js"></script>
  <script src="./coi-serviceworker.min.js"></script>
+ <script src="./subworkers.js"></script>
  <link href="./extsub.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
