--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <pre id="logs">お待ちください</pre>
  <p id="download">
   <button id="dlbutton">Windows用の似たソフト</button>
-  (<a href="https://www.fmworld.net/cs/azbyclub/qanavi/jsp/qacontents.jsp?PID=0209-8188">警告</a>が<a href="https://freesoft.tvbok.com/win10/operation/allow_smartscreen.html">出る</a>し使いにくい)
+  (別途<a href="https://learn.microsoft.com/ja-jp/windows/python/beginners#install-python">python</a>が必要です)
  </p>
  <script type="module" src="./ffmpeg-util.js" defer=""></script>
  <script type="module" src="./ffmpeg.js" defer=""></script>
