Add 'inline' to CSP default-src
seems ffmpeg requires it

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8"/>
  <title>手元の動画から字幕を抽出</title>
  <meta name="viewport" content="width=device-width" />
- <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: 'wasm-unsafe-eval' ;" />
+ <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: 'wasm-unsafe-eval' 'inline' ;" />
  <script src="./coi-config.js"></script>
  <script src="./coi-serviceworker.min.js"></script>
  <link href="./extsub.css" rel="stylesheet" type="text/css" />
